k8s/01-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: aeromaya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: MASTER_IP:5000/aeromaya-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/aeropuertos
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 10
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /api/aeropuertos
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
